# otus

.github/workflows/: release.yml
helloworld/: CMakeLists.txt  lib.cpp  lib.h  main.cpp  version.h.in
ip_filter/: CMakeLists.txt  main.cpp
